--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h2{
   letter-spacing: 4px;
 }
 .btn{
+  cursor: pointer;
   width: 100px;
   height: 40px;
   background-color: #02fa0a;
@@ -32,8 +33,8 @@ h2{
 }
 /* star modal  */
 .modal-container{
-  width: 75%;
-  height: 75%;
+  width: 50%;
+  height: 50%;
   margin: auto;
   background-color: #fff;
   display: flex;
