--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h2{
   font-size: 40px;
   letter-spacing: 4px;
 }
+
 .btn{
   /* margin: auto; */
   display: block;
@@ -41,13 +42,15 @@ h2{
   margin: auto;
   background-color: #fff;
   display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  opacity: 1;
-  position: absolute;
+  /*whenaddedopacity*//*opacity: 0;
+  */position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
@@ -57,29 +60,35 @@ h2{
   -o-transform: translate(-50%,-50%);
 }
 .modal-container .modal{
-  border-radius: 10px;
-  width: 90%;
+  box-shadow:  0 0 20px 3px #02fa0a;
+  width: 95%;
   height: 90%;
-  margin: auto;
+  margin: 20px auto;
   background-color: #fff;
   display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   flex-direction: column;
   background-color: #ebe2e2;
+  border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  
 }
 .modal h4,.modal .btn-in {
   font-size: 26px;
-  /* margin: auto; */
+  margin: auto;
+}
+.modal h4 sub{
+  font-size: 26px;
+  margin: auto;
+  color: #02fa0a;
 }
 .modal p{
   font-size: 20px;
   margin: auto;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* end modal  */
